# MeetFlow-AI

./: .gitignore  package-lock.json  package.json  readme.md
aiservices/: pyproject.toml  requirement.txt
aiservices/app/: config.py  main.py
aiservices/app/models/: schemas.py
aiservices/app/routes/: process.py  transcribe.py
aiservices/app/services/: llm_service.py  stt_service.py  webhook_service.py
web/: middleware.ts  package-lock.json  package.json
web/src/app/: page.tsx
web/src/app/api/actions/: route.ts
web/src/app/api/auth/[...nextauth]/: options.ts  route.ts
web/src/app/api/auth/register/: route.ts
web/src/app/api/meetings/: route.ts
web/src/app/api/meetings/[id]/: route.ts
web/src/lib/: auth.ts  db.ts  email.ts
web/src/models/: Action.model.ts  Meeting.model.ts  User.model.ts
web/src/types/: index.ts
